Letting Qwen migrate from Qute to Vite
